ecs/00-ecs-ec2/template.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: EC2 ECS cluster that starts out empty, with no EC2 instances yet.
       An ECS capacity provider automatically launches more EC2 instances
       as required on the fly when you request ECS to launch services or
       standalone tasks.

Parameters:
  InstanceType:
    Type: String
    Default: "t2.micro"
    Description: Class of EC2 instance used to host containers. Choose t2 for testing, m5 for general purpose, c5 for CPU intensive services, and r5 for memory intensive services
    AllowedValues: ["t2.micro"]
    ConstraintDescription: Please choose a valid instance type.

  DesiredCapacity:
    Type: Number
    Default: '0'
    Description: Number of EC2 instances to launch in your ECS cluster.

  MaxSize:
    Type: Number
    Default: '10'
    Description: Maximum number of EC2 instances that can be launched in your ECS cluster.

  ECSAMI:
    Description: The Amazon Machine Image ID used for the cluster
    Type: String
    Default: "ami-04f73ca9a4310089f"
    # Type: AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>
    # Default: /aws/service/ecs/optimized-ami/amazon-linux-2023/recommended
  VpcId:
    Type: AWS::EC2::VPC::Id
    Description: VPC ID where the ECS cluster is launched

  VpcCidrBlock:
    Type: String
    Description: The IPv4 address range of VPC, in CIDR format.

  SubnetIds:
    Type: List<AWS::EC2::Subnet::Id>
    Description: List of subnet IDs where the EC2 instances will be launched

  AccessLogS3Bucket:
    Type: String
    Description: "The name of the S3 bucket for the access logs. This attribute is required if access logs are enabled."
    Default: "None"

  ClusterName:
    Type: String
    Description: Desired cluster name.
  

Conditions:
  AllowAccessLogs: !Not [ !Equals [ !Ref AccessLogS3Bucket, "None" ]]

Resources:
  # This is authorizes ECS to manage resources on your
  # account on your behalf. This role is likely already created on your account
  # ECSRole:
  #  Type: AWS::IAM::ServiceLinkedRole
  #  Properties:
  #    AWSServiceName: 'ecs.amazonaws.com'

  # ECS Resources
  ECSCluster:
    Type: AWS::ECS::Cluster
    Properties:
      ClusterSettings:
      - Name: containerInsights
        Value: enabled

  # Autoscaling group. This launches the actual EC2 instances that will register
  # themselves as members of the cluster, and run the docker containers.
  ECSAutoScalingGroup:
    Type: AWS::AutoScaling::AutoScalingGroup
    DependsOn:
    # This is to ensure that the ASG gets deleted first before these
    # resources, when it comes to stack teardown.
    - ECSCluster
    - EC2Role
    Properties:
      VPCZoneIdentifier:
      - !Select [ 0, !Ref SubnetIds ]
      - !Select [ 1, !Ref SubnetIds ]
      - !Select [ 2, !Ref SubnetIds ]
      LaunchTemplate:
        LaunchTemplateId: !Ref ContainerInstances
        Version: !GetAtt ContainerInstances.LatestVersionNumber
      MinSize: 0
      MaxSize: !Ref MaxSize
      DesiredCapacity: !Ref DesiredCapacity
      NewInstancesProtectedFromScaleIn: true
    UpdatePolicy:
      AutoScalingReplacingUpdate:
        WillReplace: true

  # The config for each instance that is added to the cluster
  ContainerInstances:
    Type: AWS::EC2::LaunchTemplate
    Properties:
      LaunchTemplateData:
        ImageId: !Ref ECSAMI
        InstanceType: !Ref InstanceType
        IamInstanceProfile:
          Name: !Ref EC2InstanceProfile
        SecurityGroupIds:
        - !Ref ContainerHostSecurityGroup
        UserData:
        # This injected configuration file is how the EC2 instance
        # knows which ECS cluster on your AWS account it should be joining
          Fn::Base64: !Sub |
            [settings.ecs]
            cluster = "${ECSCluster}"
      # Disable IMDSv1, and require IMDSv2
        MetadataOptions:
          HttpEndpoint: enabled
          HttpTokens: required

  EC2InstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Path: /
      Roles:
      - !Ref EC2Role

  # Create an ECS capacity provider to attach the ASG to the ECS cluster
  # so that it autoscales as we launch more containers
  CapacityProvider:
    Type: AWS::ECS::CapacityProvider
    Properties:
      AutoScalingGroupProvider:
        AutoScalingGroupArn: !Ref ECSAutoScalingGroup
        ManagedScaling:
          InstanceWarmupPeriod: 60
          MinimumScalingStepSize: 1
          MaximumScalingStepSize: 100
          Status: ENABLED
          # Percentage of cluster reservation to try to maintain
          TargetCapacity: 100
        ManagedTerminationProtection: ENABLED

  # Create a cluster capacity provider assocation so that the cluster
  # will use the capacity provider
  CapacityProviderAssociation:
    Type: AWS::ECS::ClusterCapacityProviderAssociations
    Properties:
      CapacityProviders:
      - !Ref CapacityProvider
      Cluster: !Ref ECSCluster
      DefaultCapacityProviderStrategy:
      - Base: 0
        CapacityProvider: !Ref CapacityProvider
        Weight: 1

  # A security group for the EC2 hosts that will run the containers.
  # This can be used to limit incoming traffic to or outgoing traffic
  # from the container's host EC2 instance.
  ContainerHostSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Access to the EC2 hosts that run containers
      VpcId: !Ref VpcId

  # Role for the EC2 hosts. This allows the ECS agent on the EC2 hosts
  # to communciate with the ECS control plane, as well as download the docker
  # images from ECR to run on your host.
  EC2Role:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
        - Effect: Allow
          Principal:
            Service: ['ec2.amazonaws.com']
          Action: ['sts:AssumeRole']
      Path: /
      ManagedPolicyArns:
      # See reference: https://docs.aws.amazon.com/AmazonECS/latest/developerguide/security-iam-awsmanpol.html#security-iam-awsmanpol-AmazonEC2ContainerServiceforEC2Role
      - arn:aws:iam::aws:policy/service-role/AmazonEC2ContainerServiceforEC2Role
      # This managed policy allows us to connect to the instance using SSM
      - arn:aws:iam::aws:policy/AmazonSSMManagedInstanceCore
    
  # This is a role which is used within Fargate to allow the Fargate agent
  # to download images, and upload logs.
  ECSTaskExecutionRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
        - Effect: Allow
          Principal:
            Service: [ecs-tasks.amazonaws.com]
          Action: ['sts:AssumeRole']
          Condition:
            ArnLike:
              aws:SourceArn: !Sub arn:aws:ecs:${AWS::Region}:${AWS::AccountId}:*
            StringEquals:
              aws:SourceAccount: !Ref AWS::AccountId
      Path: /
      # This role enables all features of ECS. See reference:
      # https://docs.aws.amazon.com/AmazonECS/latest/developerguide/security-iam-awsmanpol.html#security-iam-awsmanpol-AmazonECSTaskExecutionRolePolicy
      ManagedPolicyArns:
      - arn:aws:iam::aws:policy/service-role/AmazonECSTaskExecutionRolePolicy

# -------------------------------------------------------
#         CREATE APPLICATION LOAD BALANCER
# -------------------------------------------------------
  ECSLoadBalancer:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    DependsOn:
    - ECSLoadBalancerSecurityGroup
    - ECSCluster
    Properties:
      IpAddressType: ipv4
      Type: application
      LoadBalancerAttributes:
        !If
        - AllowAccessLogs
        -
          - Key: access_logs.s3.enabled
            Value: true
          - Key: access_logs.s3.prefix
            Value: !Sub "${ClusterName}-ecs-alb-access-logs"
          - Key: access_logs.s3.bucket
            Value: !Ref AccessLogS3Bucket
        - !Ref "AWS::NoValue"
      Name: !Sub "${ClusterName}-ecs-alb"
      Scheme: internal
      SecurityGroups: 
        - !Ref ECSLoadBalancerSecurityGroup
      Subnets: 
      - !Select [ 0, !Ref SubnetIds ]
      - !Select [ 1, !Ref SubnetIds ]
      - !Select [ 2, !Ref SubnetIds ]

# CREATE SECURITY GROUP FOR LOAD BALANCER
  ECSLoadBalancerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Sub "${ClusterName}-ecs-alb-sg"
      GroupDescription: Allow HTTP and HTTPS access on load balancer
      VpcId: !Ref VpcId
      SecurityGroupIngress: 
      - Description: Allow HTTP traffic from VPC
        CidrIp: !Ref VpcCidrBlock
        FromPort: 80
        ToPort: 80
        IpProtocol: tcp
      - Description: Allow HTTP traffic from VPC
        CidrIp: !Ref VpcCidrBlock
        FromPort: 443
        ToPort: 443
        IpProtocol: tcp

  ECSLoadBalancerTargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      HealthCheckIntervalSeconds: 6
      HealthCheckPath: /
      HealthCheckProtocol: HTTP
      HealthCheckTimeoutSeconds: 5
      HealthyThresholdCount: 2
      Port: 80
      Protocol: HTTP
      TargetType: ip
      UnhealthyThresholdCount: 2
      VpcId: !Ref VpcId

  ECSLoadBalancerListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    DependsOn:
      - ECSLoadBalancer
    Properties:
      DefaultActions:
        - Type: 'redirect'
          RedirectConfig:
              Protocol: "#{protocol}"
              Port: "#{port}"
              Host: "#{host}"
              Path: "/ec2/"
              StatusCode: "HTTP_301"
      LoadBalancerArn: !Ref 'ECSLoadBalancer'
      Port: 80
      Protocol: HTTP
           
  ECSLoadBalancerListenerRule:
    Type: 'AWS::ElasticLoadBalancingV2::ListenerRule'
    Properties:
      Actions:
        - Type: forward
          TargetGroupArn: !Ref 'ECSLoadBalancerTargetGroup'
      Conditions:
        - Field: path-pattern
          PathPatternConfig:
            Values:
              - /
      ListenerArn: !Ref "ECSLoadBalancerListener"
      Priority: 1


Outputs:
  ClusterName:
    Description: The ECS cluster into which to launch resources
    Value: !Ref ECSCluster

  ECSTaskExecutionRole:
    Description: The role used to start up a task
    Value: !Ref ECSTaskExecutionRole

  CapacityProvider:
    Description: The cluster capacity provider that the service should use
         to request capacity when it wants to start up a task
    Value: !Ref CapacityProvider

  ECSLoadBalancer:
    Description: Application Load Balancer to be used by applications inside cluster.
    Value: !GetAtt ECSLoadBalancer.LoadBalancerArn
